		window does not fit into GtkSocket as with X11.
3.3.28	11nov11	Use larger more readable Apple fonts for Quartz.
		Added support for colorful traces using the
		/Edit/Color Format/... menu options.
		Fixed rendertimes bug where times did not always display
		when grid is turned off.
		Added keep_xz_colors gtkwaverc variable.
3.3.29	30nov11	Fixed size of declaration of render_mutex_renderopt_c_1 as it
		was one element too short.
		Added transition code for shifting away from using
		GtkItemFactoryEntry (also will help with OSX menubar 
		integration which expects menu shells).
		Added support for native Quartz menu bars.
		Removed --enable-quartz as it is auto detected now if
		PKG_CHECK_MODULES(GTK_MAC, gtk-mac-integration) is
		true and GDK is compiled against Quartz.
		Fixed pointer crashes on NULL returned on gtk_entry_get_text()
		on OSX/Quartz.
		Recommended usage for Quartz is now jhbuild with
		gtk-mac-integration, not MacPorts.
		Added mac bundle info in contrib/bundle_for_osx.
		Added gtkwave_argv0_cached as Open New Window does not work if
		"gtkwave" is not in path or is something like gtkwave-bin as
		in an OSX bundle.
		Detect context swapping in file chooser from DnD to prevent
		possible crashes.
		Block DnD while file chooser is active.
		Migrate OSX to OSX key accelerators.
		Fix for tcl code opening the root node.
		Fix time warp cmd->control mapping for OSX.
		Fix for time warped traces not rendering properly when
		x-coordinate overdraw is detected.
		Added WAVE_ALLOW_QUARTZ_FLUSH_WORKAROUND temporarily which
		needs to be set at compile time which gates redraw.
		Add GLOBALS->force_hide_show to force redraws in OSX.
		Added osx_timer() which controls forced redraw.
		Abort GHW read when nbr_el<0: indicates malformed file from
		variable/signal construct of form (7 to 0) rather than downto.
		Crash fix for non-string len zero facilities in vcd2fst.
		Fixed overflow in draw_hptr_trace_vector_analog().